Prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prometheus-deployment
    namespace: monitoring
    labels:
        app: prometheus-server
spec:
    replicas: 1
    selector:
        matchLabels:
            app: prometheus-server
    template:
        metadata:
            labels:
                app: prometheus-server
        spec:
            containers:
                - name: prometheus
                  image: prom/prometheus
                  args:
                      - '--storage.tsdb.retention.time=12h'
                      - '--config.file=/etc/prometheus/prometheus.yml'
                      - '--storage.tsdb.path=/prometheus/'
                  ports:
                      - containerPort: 9090
                  resources:
                      requests:
                          cpu: 500m
                          memory: 500M
                      limits:
                          cpu: 1
                          memory: 1Gi
                  volumeMounts:
                      - name: prometheus-config-volume
                        mountPath: /etc/prometheus/
                      - name: prometheus-storage-volume
                        mountPath: /prometheus/
            volumes:
                - name: prometheus-config-volume
                  configMap:
                      defaultMode: 420
                      name: prometheus-server-conf

                - name: prometheus-storage-volume
                  emptyDir: {}
