Prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prometheus-ingress
    namespace: monitoring
    annotations:
        spec.ingressClassName: traefik
spec:
    rules:
        - host: prometheus.byrash.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: prometheus-service
                            port:
                                name: prometheus
